# Sagi

./: .env.example  .gitignore  .gitmodules  README.md  cli.py  docker-compose.yml  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
dev/: Dockerfile  docker-compose.sh  install_vscode_extensions.sh  mcp_trader_dependency.sh  prerequesits.md  pull_local_models.sh  setup.sh  setup_dc.sh
doc_db/loaders/: __init__.py  csv_loader.py  excel_loader.py  html_loader.py  pdf_loader.py  ppt_loader.py  word_loader.py
mcp_server/domain_specific_mcp/: pyproject.toml
mcp_server/domain_specific_mcp/src/domain_specific_mcp/: prompt_template.py  test.py
src/Sagi/doc_db/loaders/: __init__.py  base_loader.py  pdf_loader.py
src/Sagi/factories/: model_client_factory.py
src/Sagi/mcp_server/domain_specific_mcp/: README.md
src/Sagi/mcp_server/domain_specific_mcp/src/domain_specific_mcp/: __init__.py  prompt_template.py  server.py
src/Sagi/mcp_server/pg_mcp/: pyproject.toml
src/Sagi/mcp_server/pg_mcp/src/pg_mcp/: __init__.py  server.py  test.py
src/Sagi/resources/: db_manager.py
src/Sagi/services/: global_resource_manager.py  model_client_service.py  resource_manager.py
src/Sagi/templates/test_work_dir/: file_content.json  slide_induction.json
src/Sagi/tools/: web_search_agent.py
src/Sagi/tools/pdf_extraction/: _utils.py  extraction_data.py  html_generation.py  html_template.py  pdf_extraction.py  pdf_extraction_tool.py  prompt.py  segmentation.py
src/Sagi/tools/stream_code_executor/: stream_code_executor.py  stream_code_executor_agent.py  stream_docker_command_line_code_executor.py  stream_local_command_line_code_executor.py
src/Sagi/utils/: chat_template.py  hirag_message.py  json_handler.py  load_config.py  logging.py  logging_utils.py  mcp_utils.py  message_to_memory.py  model_client.py  model_info.py  prompt.py  prompt_templates.py  queries.py  settings.py  token_usage.py
src/Sagi/vercel/: __init__.py  tool_call.py  tool_call_input.py  tool_call_output.py
src/Sagi/workflows/: __init__.py  base_plan_manager.py  plan_manager.py  planning.md  planning.py  planning.toml  planning_group_chat.py  planning_orchestrator.py  sagi_memory.py  team.toml
src/Sagi/workflows/agents/: file_editor.py  hirag_agent.py  multi_round.py  search_result_analysis_agent.py  template_agent.py
src/Sagi/workflows/analyzing/: analyze_manager.py  analyzing.py  analyzing.toml  analyzing_group_chat.py  analyzing_orchestrator.py
src/Sagi/workflows/general/: general.toml  general_chat.py
src/Sagi/workflows/planning/: plan_manager.py  planning.py  planning_group_chat.py  planning_local.toml  planning_orchestrator.py  team.toml
src/Sagi/workflows/planning_html/: __init__.py  config.toml  plan_manager.py  planning_html.py  planning_html_group_chat.py  planning_html_orchestrator.py  team.toml
src/Sagi/workflows/question_prediction/: __init__.py  config.toml  question_prediction.py  question_prediction_agent.py  question_prediction_web_search_agent.py
tests/: test_anal.py  test_analyze.py  test_db_manager.py  test_docker_command_line.py  test_general_chat.py  test_hirag_agent.py  test_hirag_set_language.py  test_parse_to_md.py  test_pdf_extraction.py  test_plan_manager.py  test_stream_code_executor_agent.py  test_web_search_agent.py  test_workflow_reset.py  test_workflow_state.py
utils/: llm_clients.py  load_config.py  prompt.py  queries.py
workflows/: __init__.py  planning.md  planning.py  planning.toml  planning_group_chat.py  planning_orchestrator.py
workflows/stream_code_executor/: stream_code_executor.py  stream_code_executor_agent.py  stream_docker_command_line_code_executor.py  stream_local_command_line_code_executor.py  test_stream_code_executor_agent.py
