[project]
name = "Sagi"
version = "0.1.0"
description = "Sagi: a personalised, production-ready LLM agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.0",
    "autoflake>=2.3.1",
    "autogen-agentchat==0.5.6",
    "autogen-core==0.5.6",
    "autogen-ext[docker]==0.5.6",
    "black>=25.1.0",
    "blackdoc>=0.3.9",
    "grpcio>=1.71.0",
    "hkdf==0.0.3",
    "isort>=6.0.1",
    "json-schema-to-pydantic==0.2.4",
    "mcp>=1.6.0",
    "mypy-extensions>=1.1.0",
    "openai==1.61.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "pytest==8.3.5",
    "python-jose==3.4.0",
    "sqlalchemy[asyncpg]==2.0.40",
    "sqlmodel==0.0.23",
    "tiktoken>=0.9.0",
    "tomli>=2.2.1",
]
