[project]
name = "Sagi"
version = "0.1.0"
description = "Sagi: a personalised, production-ready LLM agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.5.5",
    "asyncpg==0.30.0",
    "autoflake>=2.3.1",
    "autogen-agentchat==0.5.7",
    "autogen-core==0.5.7",
    "autogen-ext[anthropic,docker]==0.5.7",
    "black>=25.1.0",
    "blackdoc>=0.3.9",
    "docker==7.1.0",
    "grpcio>=1.71.0",
    "hkdf==0.0.3",
    "isort>=6.0.1",
    "json-schema-to-pydantic==0.2.4",
    "mcp>=1.6.0",
    "mypy-extensions>=1.1.0",
    "openai==1.61.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "pytest==8.3.5",
    "python-jose==3.4.0",
    "redis==6.2.0",
    "sqlalchemy[asyncpg]==2.0.40",
    "sqlmodel==0.0.24",
    "tiktoken>=0.9.0",
    "tomli>=2.2.1",
    "pytest-asyncio==0.26.0",
    "hirag-prod",
    "fastapi>=0.115.12",
    "pyflakes>=3.3.2",
    "pydantic-settings>=2.9.1",
    "pillow==11.0.0",
    "pdfkit>=1.0.0",
    "xhtml2pdf>=0.2.17",
    "boto3>=1.39.3",
    "pgvector>=0.4.1",
    "xxhash==3.5.0",
    "pymupdf==1.26.3",
    "psycopg2==2.9.10",
    "pyhumps==3.8.0",
    "googletrans==4.0.2",
    "rapidfuzz==3.14.1",
    "hanlp==2.1.2",
    "opencc==1.1.9"
]

[tool.uv.sources]
hirag-prod = { git = "https://github.com/Kasma-Inc/hirag-prod.git" }
