[project]
name = "pg-mcp"
version = "0.1.0"
description = "Python server implementing Model Context Protocol (MCP) for interact with postgre."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
pg_mcp = "pg_mcp.server:main"
